--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':example', ':preferencer-processor', ':preferencer'
+include ':example', ':preferencer-processor', ':preferencer-core', ':preferencer-api'
